added tests for login and register