@@ -7,6 +7,17 @@
   <version>1.0-SNAPSHOT</version>
   <name>auction-system</name>
   <url>http://maven.apache.org</url>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.2.5</version> <configuration>
+        <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+      </configuration>
+      </plugin>
+    </plugins>
+  </build>
   <dependencies>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
